--- a/stm32f7-drone.ioc
+++ b/stm32f7-drone.ioc
@@ -12,7 +12,7 @@ ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.ADC1.0.Instance=DMA2_Stream0
+Dma.ADC1.0.Instance=DMA2_Stream4
 Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 Dma.ADC1.0.Mode=DMA_CIRCULAR
@@ -23,7 +23,7 @@ Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlign
 Dma.MEMTOMEM.1.Direction=DMA_MEMORY_TO_MEMORY
 Dma.MEMTOMEM.1.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.MEMTOMEM.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.MEMTOMEM.1.Instance=DMA2_Stream1
+Dma.MEMTOMEM.1.Instance=DMA2_Stream0
 Dma.MEMTOMEM.1.MemBurst=DMA_MBURST_SINGLE
 Dma.MEMTOMEM.1.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.MEMTOMEM.1.MemInc=DMA_MINC_DISABLE
@@ -36,7 +36,7 @@ Dma.MEMTOMEM.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataA
 Dma.MEMTOMEM.2.Direction=DMA_MEMORY_TO_MEMORY
 Dma.MEMTOMEM.2.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.MEMTOMEM.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.MEMTOMEM.2.Instance=DMA2_Stream2
+Dma.MEMTOMEM.2.Instance=DMA2_Stream1
 Dma.MEMTOMEM.2.MemBurst=DMA_MBURST_SINGLE
 Dma.MEMTOMEM.2.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.MEMTOMEM.2.MemInc=DMA_MINC_DISABLE
@@ -49,7 +49,7 @@ Dma.MEMTOMEM.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataA
 Dma.MEMTOMEM.3.Direction=DMA_MEMORY_TO_MEMORY
 Dma.MEMTOMEM.3.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.MEMTOMEM.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.MEMTOMEM.3.Instance=DMA2_Stream3
+Dma.MEMTOMEM.3.Instance=DMA2_Stream2
 Dma.MEMTOMEM.3.MemBurst=DMA_MBURST_SINGLE
 Dma.MEMTOMEM.3.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.MEMTOMEM.3.MemInc=DMA_MINC_DISABLE
@@ -62,7 +62,7 @@ Dma.MEMTOMEM.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataA
 Dma.MEMTOMEM.4.Direction=DMA_MEMORY_TO_MEMORY
 Dma.MEMTOMEM.4.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.MEMTOMEM.4.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.MEMTOMEM.4.Instance=DMA2_Stream4
+Dma.MEMTOMEM.4.Instance=DMA2_Stream3
 Dma.MEMTOMEM.4.MemBurst=DMA_MBURST_SINGLE
 Dma.MEMTOMEM.4.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.MEMTOMEM.4.MemInc=DMA_MINC_DISABLE
@@ -127,6 +127,7 @@ MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA2_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -254,8 +255,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=stm32f722ze-ESC.ioc
-ProjectManager.ProjectName=stm32f722ze-ESC
+ProjectManager.ProjectFileName=stm32f7-drone.ioc
+ProjectManager.ProjectName=stm32f7-drone
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
