--- a/stm32f7-drone.ioc
+++ b/stm32f7-drone.ioc
@@ -112,6 +112,7 @@ Mcu.Pin21=PA14
 Mcu.Pin22=PB3
 Mcu.Pin23=PB7
 Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_TIM4_VS_OPM
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PB1
@@ -119,7 +120,7 @@ Mcu.Pin6=PB14
 Mcu.Pin7=PD8
 Mcu.Pin8=PD9
 Mcu.Pin9=PD12
-Mcu.PinsNb=25
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F722ZETx
@@ -366,19 +367,25 @@ SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
 SH.S_TIM4_CH3.ConfNb=1
 SH.S_TIM4_CH4.0=TIM4_CH4,PWM Generation4 CH4
 SH.S_TIM4_CH4.ConfNb=1
+TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM4.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM4.IPParameters=Prescaler,Period,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation1 CH1,Channel-PWM Generation4 CH4
+TIM4.IPParameters=Prescaler,Period,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,OCPolarity_1,TIM_MasterOutputTrigger,AutoReloadPreload,Channel-PWM Generation1 CH1,OC1Preload_PWM
+TIM4.OC1Preload_PWM=ENABLE
+TIM4.OCPolarity_1=TIM_OCPOLARITY_HIGH
 TIM4.Period=719
 TIM4.Prescaler=0
+TIM4.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM4_VS_OPM.Mode=OPM_bit
+VP_TIM4_VS_OPM.Signal=TIM4_VS_OPM
 board=NUCLEO-F722ZE
 boardIOC=true
 isbadioc=false
