Changed to 1 DMA stream. The DMA transfer error flag is being set when I try to enable the DMA for a memory trasnfer.

--- a/stm32f7-drone.ioc
+++ b/stm32f7-drone.ioc
@@ -30,54 +30,12 @@ Dma.MEMTOMEM.1.MemInc=DMA_MINC_DISABLE
 Dma.MEMTOMEM.1.Mode=DMA_NORMAL
 Dma.MEMTOMEM.1.PeriphBurst=DMA_PBURST_SINGLE
 Dma.MEMTOMEM.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.MEMTOMEM.1.PeriphInc=DMA_PINC_DISABLE
+Dma.MEMTOMEM.1.PeriphInc=DMA_PINC_ENABLE
 Dma.MEMTOMEM.1.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.MEMTOMEM.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.MEMTOMEM.2.Direction=DMA_MEMORY_TO_MEMORY
-Dma.MEMTOMEM.2.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.MEMTOMEM.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.MEMTOMEM.2.Instance=DMA2_Stream1
-Dma.MEMTOMEM.2.MemBurst=DMA_MBURST_SINGLE
-Dma.MEMTOMEM.2.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.MEMTOMEM.2.MemInc=DMA_MINC_DISABLE
-Dma.MEMTOMEM.2.Mode=DMA_NORMAL
-Dma.MEMTOMEM.2.PeriphBurst=DMA_PBURST_SINGLE
-Dma.MEMTOMEM.2.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.MEMTOMEM.2.PeriphInc=DMA_PINC_DISABLE
-Dma.MEMTOMEM.2.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.MEMTOMEM.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.MEMTOMEM.3.Direction=DMA_MEMORY_TO_MEMORY
-Dma.MEMTOMEM.3.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.MEMTOMEM.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.MEMTOMEM.3.Instance=DMA2_Stream2
-Dma.MEMTOMEM.3.MemBurst=DMA_MBURST_SINGLE
-Dma.MEMTOMEM.3.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.MEMTOMEM.3.MemInc=DMA_MINC_DISABLE
-Dma.MEMTOMEM.3.Mode=DMA_NORMAL
-Dma.MEMTOMEM.3.PeriphBurst=DMA_PBURST_SINGLE
-Dma.MEMTOMEM.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.MEMTOMEM.3.PeriphInc=DMA_PINC_DISABLE
-Dma.MEMTOMEM.3.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.MEMTOMEM.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.MEMTOMEM.4.Direction=DMA_MEMORY_TO_MEMORY
-Dma.MEMTOMEM.4.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.MEMTOMEM.4.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.MEMTOMEM.4.Instance=DMA2_Stream3
-Dma.MEMTOMEM.4.MemBurst=DMA_MBURST_SINGLE
-Dma.MEMTOMEM.4.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.MEMTOMEM.4.MemInc=DMA_MINC_DISABLE
-Dma.MEMTOMEM.4.Mode=DMA_NORMAL
-Dma.MEMTOMEM.4.PeriphBurst=DMA_PBURST_SINGLE
-Dma.MEMTOMEM.4.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.MEMTOMEM.4.PeriphInc=DMA_PINC_DISABLE
-Dma.MEMTOMEM.4.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.MEMTOMEM.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.Request0=ADC1
 Dma.Request1=MEMTOMEM
-Dma.Request2=MEMTOMEM
-Dma.Request3=MEMTOMEM
-Dma.Request4=MEMTOMEM
-Dma.RequestsNb=5
+Dma.RequestsNb=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -112,7 +70,6 @@ Mcu.Pin21=PA14
 Mcu.Pin22=PB3
 Mcu.Pin23=PB7
 Mcu.Pin24=VP_SYS_VS_Systick
-Mcu.Pin25=VP_TIM4_VS_OPM
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PB1
@@ -120,7 +77,7 @@ Mcu.Pin6=PB14
 Mcu.Pin7=PD8
 Mcu.Pin8=PD9
 Mcu.Pin9=PD12
-Mcu.PinsNb=26
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F722ZETx
@@ -198,17 +155,9 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PD12.GPIOParameters=GPIO_Label
-PD12.GPIO_Label=Timer4_CH1_ESC1
 PD12.Signal=S_TIM4_CH1
-PD13.GPIOParameters=GPIO_Label
-PD13.GPIO_Label=Timer4_CH2_ESC2
 PD13.Signal=S_TIM4_CH2
-PD14.GPIOParameters=GPIO_Label
-PD14.GPIO_Label=Timer4_CH3_ESC3
 PD14.Signal=S_TIM4_CH3
-PD15.GPIOParameters=GPIO_Label
-PD15.GPIO_Label=Timer4_CH4_ESC4
 PD15.Signal=S_TIM4_CH4
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
@@ -367,25 +316,18 @@ SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
 SH.S_TIM4_CH3.ConfNb=1
 SH.S_TIM4_CH4.0=TIM4_CH4,PWM Generation4 CH4
 SH.S_TIM4_CH4.ConfNb=1
-TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_DISABLE
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM4.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM4.IPParameters=Prescaler,Period,Channel-PWM Generation3 CH3,Channel-PWM Generation2 CH2,Channel-PWM Generation4 CH4,OCPolarity_1,TIM_MasterOutputTrigger,AutoReloadPreload,Channel-PWM Generation1 CH1,OC1Preload_PWM
-TIM4.OC1Preload_PWM=ENABLE
-TIM4.OCPolarity_1=TIM_OCPOLARITY_HIGH
+TIM4.IPParameters=Period,Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4
 TIM4.Period=719
-TIM4.Prescaler=0
-TIM4.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_TIM4_VS_OPM.Mode=OPM_bit
-VP_TIM4_VS_OPM.Signal=TIM4_VS_OPM
 board=NUCLEO-F722ZE
 boardIOC=true
 isbadioc=false
