DSHOT Packet SUCCESS - 2 things to get it finished. Needed to add a while() so that the code would stall while the enable bit for the DMA was high. Basically waiting while the whole DMA transfer was complete. Also needed to enable preloading for all of the channels. This 2 fixes worked and I think I understand them, however it took me messing around to figure out these 2 things and so it feels slightly hacky.

--- a/stm32f7-drone.ioc
+++ b/stm32f7-drone.ioc
@@ -20,22 +20,19 @@ Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_MEDIUM
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.MEMTOMEM.1.Direction=DMA_MEMORY_TO_MEMORY
-Dma.MEMTOMEM.1.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.MEMTOMEM.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.MEMTOMEM.1.Instance=DMA2_Stream0
-Dma.MEMTOMEM.1.MemBurst=DMA_MBURST_SINGLE
-Dma.MEMTOMEM.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.MEMTOMEM.1.MemInc=DMA_MINC_DISABLE
-Dma.MEMTOMEM.1.Mode=DMA_NORMAL
-Dma.MEMTOMEM.1.PeriphBurst=DMA_PBURST_SINGLE
-Dma.MEMTOMEM.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.MEMTOMEM.1.PeriphInc=DMA_PINC_ENABLE
-Dma.MEMTOMEM.1.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.MEMTOMEM.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.Request0=ADC1
-Dma.Request1=MEMTOMEM
+Dma.Request1=TIM4_CH1
 Dma.RequestsNb=2
+Dma.TIM4_CH1.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM4_CH1.1.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM4_CH1.1.Instance=DMA1_Stream0
+Dma.TIM4_CH1.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM4_CH1.1.MemInc=DMA_MINC_ENABLE
+Dma.TIM4_CH1.1.Mode=DMA_NORMAL
+Dma.TIM4_CH1.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM4_CH1.1.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM4_CH1.1.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.TIM4_CH1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -56,20 +53,19 @@ Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PD13
 Mcu.Pin11=PD14
-Mcu.Pin12=PD15
-Mcu.Pin13=PG6
-Mcu.Pin14=PG7
-Mcu.Pin15=PA8
-Mcu.Pin16=PA9
-Mcu.Pin17=PA10
-Mcu.Pin18=PA11
-Mcu.Pin19=PA12
+Mcu.Pin12=PG6
+Mcu.Pin13=PG7
+Mcu.Pin14=PA8
+Mcu.Pin15=PA9
+Mcu.Pin16=PA10
+Mcu.Pin17=PA11
+Mcu.Pin18=PA12
+Mcu.Pin19=PA13
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA13
-Mcu.Pin21=PA14
-Mcu.Pin22=PB3
-Mcu.Pin23=PB7
-Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin20=PA14
+Mcu.Pin21=PB3
+Mcu.Pin22=PB7
+Mcu.Pin23=VP_SYS_VS_Systick
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PB1
@@ -77,14 +73,14 @@ Mcu.Pin6=PB14
 Mcu.Pin7=PD8
 Mcu.Pin8=PD9
 Mcu.Pin9=PD12
-Mcu.PinsNb=25
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F722ZETx
 MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-NVIC.DMA2_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
@@ -158,7 +154,6 @@ PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PD12.Signal=S_TIM4_CH1
 PD13.Signal=S_TIM4_CH2
 PD14.Signal=S_TIM4_CH3
-PD15.Signal=S_TIM4_CH4
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
@@ -308,25 +303,22 @@ SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
+SH.S_TIM4_CH1.0=TIM4_CH1,Output Compare1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
 SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
 SH.S_TIM4_CH3.ConfNb=1
-SH.S_TIM4_CH4.0=TIM4_CH4,PWM Generation4 CH4
-SH.S_TIM4_CH4.ConfNb=1
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
-TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM4.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM4.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM4.IPParameters=Period,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,AutoReloadPreload,OCFastMode_PWM-PWM Generation3 CH3,OCFastMode_PWM-PWM Generation4 CH4,OC4Preload_PWM,OC3Preload_PWM,OC2Preload_PWM,Channel-PWM Generation1 CH1
-TIM4.OC2Preload_PWM=DISABLE
-TIM4.OC3Preload_PWM=DISABLE
-TIM4.OC4Preload_PWM=DISABLE
+TIM4.IPParameters=Period,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,AutoReloadPreload,OCFastMode_PWM-PWM Generation3 CH3,OC3Preload_PWM,OC2Preload_PWM,OCMode_1,OC1Preload,Channel-Output Compare1 CH1
+TIM4.OC1Preload=ENABLE
+TIM4.OC2Preload_PWM=ENABLE
+TIM4.OC3Preload_PWM=ENABLE
 TIM4.OCFastMode_PWM-PWM\ Generation3\ CH3=TIM_OCFAST_DISABLE
-TIM4.OCFastMode_PWM-PWM\ Generation4\ CH4=TIM_OCFAST_DISABLE
+TIM4.OCMode_1=TIM_OCMODE_ACTIVE
 TIM4.Period=719
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
