--- a/stm32f7-drone.ioc
+++ b/stm32f7-drone.ioc
@@ -1,28 +1,60 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_9
 ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
-ADC1.ContinuousConvMode=DISABLE
+ADC1.ContinuousConvMode=ENABLE
 ADC1.DMAContinuousRequests=ENABLE
-ADC1.EOCSelection=ADC_EOC_SEQ_CONV
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,EOCSelection,ContinuousConvMode,DMAContinuousRequests,ClockPrescaler
+ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
+ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,EOCSelection,ContinuousConvMode,DMAContinuousRequests,ClockPrescaler,InjNumberOfConversion
+ADC1.InjNumberOfConversion=0
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.ADC1.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
 Dma.ADC1.0.Instance=DMA2_Stream4
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
-Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.0.MemBurst=DMA_MBURST_SINGLE
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC1.0.MemInc=DMA_MINC_DISABLE
 Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.0.PeriphBurst=DMA_PBURST_SINGLE
+Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
 Dma.ADC1.0.Priority=DMA_PRIORITY_MEDIUM
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.I2C1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C1_RX.2.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.I2C1_RX.2.FIFOThreshold=DMA_FIFO_THRESHOLD_1QUARTERFULL
+Dma.I2C1_RX.2.Instance=DMA1_Stream5
+Dma.I2C1_RX.2.MemBurst=DMA_MBURST_INC4
+Dma.I2C1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_RX.2.Mode=DMA_NORMAL
+Dma.I2C1_RX.2.PeriphBurst=DMA_PBURST_INC4
+Dma.I2C1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_RX.2.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.I2C1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.I2C1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C1_TX.3.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.I2C1_TX.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.I2C1_TX.3.Instance=DMA1_Stream6
+Dma.I2C1_TX.3.MemBurst=DMA_MBURST_INC4
+Dma.I2C1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_TX.3.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_TX.3.Mode=DMA_NORMAL
+Dma.I2C1_TX.3.PeriphBurst=DMA_PBURST_INC4
+Dma.I2C1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_TX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_TX.3.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.I2C1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 Dma.Request0=ADC1
 Dma.Request1=TIM4_CH1
-Dma.RequestsNb=2
+Dma.Request2=I2C1_RX
+Dma.Request3=I2C1_TX
+Dma.RequestsNb=4
 Dma.TIM4_CH1.1.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM4_CH1.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.TIM4_CH1.1.Instance=DMA1_Stream0
@@ -35,18 +67,23 @@ Dma.TIM4_CH1.1.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.TIM4_CH1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=Timing,OwnAddress,NoStretchMode
+I2C1.NoStretchMode=I2C_NOSTRETCH_DISABLE
+I2C1.OwnAddress=0x6A
+I2C1.Timing=0x20404768
 KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
 Mcu.IP2=DMA
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM4
-Mcu.IP7=USART3
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP3=I2C1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SYS
+Mcu.IP7=TIM4
+Mcu.IP8=USART3
+Mcu.IP9=USB_OTG_FS
+Mcu.IPNb=10
 Mcu.Name=STM32F722Z(C-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -65,7 +102,9 @@ Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin20=PA14
 Mcu.Pin21=PB3
 Mcu.Pin22=PB7
-Mcu.Pin23=VP_SYS_VS_Systick
+Mcu.Pin23=PB8
+Mcu.Pin24=PB9
+Mcu.Pin25=VP_SYS_VS_Systick
 Mcu.Pin3=PH0-OSC_IN
 Mcu.Pin4=PH1-OSC_OUT
 Mcu.Pin5=PB1
@@ -73,7 +112,7 @@ Mcu.Pin6=PB14
 Mcu.Pin7=PD8
 Mcu.Pin8=PD9
 Mcu.Pin9=PD12
-Mcu.PinsNb=24
+Mcu.PinsNb=26
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F722ZETx
@@ -81,6 +120,8 @@ MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA2_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
@@ -92,19 +133,18 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=USB_ID
 PA10.Locked=true
+PA10.Mode=OTG/Dual_Role_Device
 PA10.Signal=USB_OTG_FS_ID
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=USB_DM
 PA11.Locked=true
-PA11.Mode=Device_Only
+PA11.Mode=OTG/Dual_Role_Device
 PA11.Signal=USB_OTG_FS_DM
 PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=USB_DP
 PA12.Locked=true
-PA12.Mode=Device_Only
+PA12.Mode=OTG/Dual_Role_Device
 PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
@@ -127,20 +167,23 @@ PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=ADC_Throttle_Control
+PB1.GPIO_Label=ADC_THROTTLE_CONTROL
 PB1.Signal=ADCx_IN9
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
 PB14.Locked=true
 PB14.Signal=GPIO_Output
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
 PC13.Locked=true
@@ -151,8 +194,14 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PD12.GPIOParameters=GPIO_Label
+PD12.GPIO_Label=TIM4_CH1_DMA_LATCH
 PD12.Signal=S_TIM4_CH1
+PD13.GPIOParameters=GPIO_Label
+PD13.GPIO_Label=TIM4_CH2_MOTOR_1
 PD13.Signal=S_TIM4_CH2
+PD14.GPIOParameters=GPIO_Label
+PD14.GPIO_Label=TIM4_CH3_MOTOR_2
 PD14.Signal=S_TIM4_CH3
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
@@ -207,7 +256,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -322,8 +371,6 @@ TIM4.OCMode_1=TIM_OCMODE_ACTIVE
 TIM4.Period=359
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
-USB_OTG_FS.IPParameters=VirtualMode
-USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F722ZE
