Set up 4 channels for motor outputs from TIM3 and the DMA trigger is channel 1 in TIM4. Need to clear all of the trasnfer flags and make sure all of the channels are sending full DSHOT packets.

--- a/stm32f7-drone.ioc
+++ b/stm32f7-drone.ioc
@@ -75,46 +75,51 @@ KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
+Mcu.IP10=USB_OTG_FS
 Mcu.IP2=DMA
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=TIM4
-Mcu.IP8=USART3
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP7=TIM3
+Mcu.IP8=TIM4
+Mcu.IP9=USART3
+Mcu.IPNb=11
 Mcu.Name=STM32F722Z(C-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PD9
-Mcu.Pin11=PD12
-Mcu.Pin12=PD13
-Mcu.Pin13=PD14
-Mcu.Pin14=PG6
-Mcu.Pin15=PG7
-Mcu.Pin16=PA8
-Mcu.Pin17=PA9
-Mcu.Pin18=PA10
-Mcu.Pin19=PA11
+Mcu.Pin10=PF15
+Mcu.Pin11=PB14
+Mcu.Pin12=PD8
+Mcu.Pin13=PD9
+Mcu.Pin14=PD12
+Mcu.Pin15=PD13
+Mcu.Pin16=PD14
+Mcu.Pin17=PG6
+Mcu.Pin18=PG7
+Mcu.Pin19=PC9
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA12
-Mcu.Pin21=PA13
-Mcu.Pin22=PA14
-Mcu.Pin23=PB3
-Mcu.Pin24=PB7
-Mcu.Pin25=PB8
-Mcu.Pin26=PB9
-Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin20=PA8
+Mcu.Pin21=PA9
+Mcu.Pin22=PA10
+Mcu.Pin23=PA11
+Mcu.Pin24=PA12
+Mcu.Pin25=PA13
+Mcu.Pin26=PA14
+Mcu.Pin27=PB3
+Mcu.Pin28=PB7
+Mcu.Pin29=PB8
 Mcu.Pin3=PH0-OSC_IN
+Mcu.Pin30=PB9
+Mcu.Pin31=VP_SYS_VS_Systick
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PB1
-Mcu.Pin6=PF14
-Mcu.Pin7=PF15
-Mcu.Pin8=PB14
-Mcu.Pin9=PD8
-Mcu.PinsNb=28
+Mcu.Pin5=PA6
+Mcu.Pin6=PA7
+Mcu.Pin7=PB0
+Mcu.Pin8=PB1
+Mcu.Pin9=PF14
+Mcu.PinsNb=32
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F722ZETx
@@ -158,6 +163,12 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=TIM_3_CH1_MOTOR_1
+PA6.Signal=S_TIM3_CH1
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=TIM_3_CH1_MOTOR_2
+PA7.Signal=S_TIM3_CH2
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=USB_SOF [TP1]
 PA8.Locked=true
@@ -168,6 +179,9 @@ PA9.GPIO_Label=USB_VBUS
 PA9.Locked=true
 PA9.Mode=Activate_VBUS
 PA9.Signal=USB_OTG_FS_VBUS
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=TIM_3_CH1_MOTOR_3
+PB0.Signal=S_TIM3_CH3
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=ADC_THROTTLE_CONTROL
 PB1.Signal=ADCx_IN9
@@ -196,6 +210,9 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=TIM_3_CH1_MOTOR_4
+PC9.Signal=S_TIM3_CH4
 PD12.GPIOParameters=GPIO_Label
 PD12.GPIO_Label=TIM4_CH1_DMA_LATCH
 PD12.Signal=S_TIM4_CH1
@@ -358,23 +375,39 @@ SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
+SH.S_TIM3_CH1.ConfNb=1
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
+SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM3_CH4.0=TIM3_CH4,PWM Generation4 CH4
+SH.S_TIM3_CH4.ConfNb=1
 SH.S_TIM4_CH1.0=TIM4_CH1,Output Compare1 CH1
 SH.S_TIM4_CH1.ConfNb=1
 SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
 SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
 SH.S_TIM4_CH3.ConfNb=1
+TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,AutoReloadPreload
+TIM3.Period=359
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM4.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM4.IPParameters=Period,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,AutoReloadPreload,OCFastMode_PWM-PWM Generation3 CH3,OC3Preload_PWM,OC2Preload_PWM,OCMode_1,OC1Preload,Channel-Output Compare1 CH1
+TIM4.IPParameters=Period,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,AutoReloadPreload,OCFastMode_PWM-PWM Generation3 CH3,OC3Preload_PWM,OC2Preload_PWM,OCMode_1,OC1Preload,Channel-Output Compare1 CH1,Pulse-Output Compare1 CH1
 TIM4.OC1Preload=ENABLE
 TIM4.OC2Preload_PWM=ENABLE
 TIM4.OC3Preload_PWM=ENABLE
 TIM4.OCFastMode_PWM-PWM\ Generation3\ CH3=TIM_OCFAST_DISABLE
 TIM4.OCMode_1=TIM_OCMODE_ACTIVE
 TIM4.Period=359
+TIM4.Pulse-Output\ Compare1\ CH1=1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
