Added peripheral support for RX. I think I may need to add RTOS support because Im receiving hardfaults whenever I run the code. My hypothesis is that because the DMA hangs the code in while loops because Im waiting for the DMA transfer to complete before releasing control. I think if I add RTOS I can create multiple streams.

--- a/stm32f7-drone.ioc
+++ b/stm32f7-drone.ioc
@@ -1,70 +1,64 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_9
-ADC1.ClockPrescaler=ADC_CLOCK_SYNC_PCLK_DIV8
-ADC1.ContinuousConvMode=ENABLE
-ADC1.DMAContinuousRequests=ENABLE
-ADC1.EOCSelection=ADC_EOC_SINGLE_CONV
-ADC1.IPParameters=Rank-1\#ChannelRegularConversion,master,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,EOCSelection,ContinuousConvMode,DMAContinuousRequests,ClockPrescaler,InjNumberOfConversion
-ADC1.InjNumberOfConversion=0
-ADC1.NbrOfConversion=1
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.IPParameters=Rank-2\#ChannelRegularConversion,master,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,NbrOfConversionFlag
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-1\#ChannelRegularConversion=1
-ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
+ADC1.Rank-2\#ChannelRegularConversion=1
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
-Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.ADC1.0.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.ADC1.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.ADC1.0.Instance=DMA2_Stream4
-Dma.ADC1.0.MemBurst=DMA_MBURST_SINGLE
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.ADC1.0.MemInc=DMA_MINC_DISABLE
-Dma.ADC1.0.Mode=DMA_CIRCULAR
-Dma.ADC1.0.PeriphBurst=DMA_PBURST_SINGLE
-Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_MEDIUM
-Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.I2C1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C1_RX.2.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.I2C1_RX.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.I2C1_RX.2.Instance=DMA1_Stream5
-Dma.I2C1_RX.2.MemBurst=DMA_MBURST_INC4
-Dma.I2C1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_RX.2.Mode=DMA_NORMAL
-Dma.I2C1_RX.2.PeriphBurst=DMA_PBURST_INC4
-Dma.I2C1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_RX.2.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.I2C1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.I2C1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.I2C1_TX.3.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.I2C1_TX.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.I2C1_TX.3.Instance=DMA1_Stream6
-Dma.I2C1_TX.3.MemBurst=DMA_MBURST_INC4
-Dma.I2C1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_TX.3.Mode=DMA_NORMAL
-Dma.I2C1_TX.3.PeriphBurst=DMA_PBURST_INC4
-Dma.I2C1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_TX.3.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.I2C1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
-Dma.Request0=ADC1
-Dma.Request1=TIM4_CH1
-Dma.Request2=I2C1_RX
-Dma.Request3=I2C1_TX
+Dma.I2C1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C1_RX.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.I2C1_RX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.I2C1_RX.1.Instance=DMA1_Stream5
+Dma.I2C1_RX.1.MemBurst=DMA_MBURST_INC4
+Dma.I2C1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_RX.1.Mode=DMA_NORMAL
+Dma.I2C1_RX.1.PeriphBurst=DMA_PBURST_INC4
+Dma.I2C1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_RX.1.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.I2C1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.I2C1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C1_TX.2.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.I2C1_TX.2.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.I2C1_TX.2.Instance=DMA1_Stream7
+Dma.I2C1_TX.2.MemBurst=DMA_MBURST_INC4
+Dma.I2C1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_TX.2.Mode=DMA_NORMAL
+Dma.I2C1_TX.2.PeriphBurst=DMA_PBURST_INC4
+Dma.I2C1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_TX.2.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.I2C1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.Request0=TIM4_CH1
+Dma.Request1=I2C1_RX
+Dma.Request2=I2C1_TX
+Dma.Request3=TIM2_UP/CH3
 Dma.RequestsNb=4
-Dma.TIM4_CH1.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.TIM4_CH1.1.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.TIM4_CH1.1.Instance=DMA1_Stream0
-Dma.TIM4_CH1.1.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.TIM4_CH1.1.MemInc=DMA_MINC_ENABLE
-Dma.TIM4_CH1.1.Mode=DMA_NORMAL
-Dma.TIM4_CH1.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.TIM4_CH1.1.PeriphInc=DMA_PINC_DISABLE
-Dma.TIM4_CH1.1.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.TIM4_CH1.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.TIM2_UP/CH3.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.TIM2_UP/CH3.3.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.TIM2_UP/CH3.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.TIM2_UP/CH3.3.Instance=DMA1_Stream1
+Dma.TIM2_UP/CH3.3.MemBurst=DMA_MBURST_INC4
+Dma.TIM2_UP/CH3.3.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM2_UP/CH3.3.MemInc=DMA_MINC_ENABLE
+Dma.TIM2_UP/CH3.3.Mode=DMA_NORMAL
+Dma.TIM2_UP/CH3.3.PeriphBurst=DMA_PBURST_INC4
+Dma.TIM2_UP/CH3.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM2_UP/CH3.3.PeriphInc=DMA_PINC_ENABLE
+Dma.TIM2_UP/CH3.3.Priority=DMA_PRIORITY_HIGH
+Dma.TIM2_UP/CH3.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.TIM4_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.TIM4_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.TIM4_CH1.0.Instance=DMA1_Stream0
+Dma.TIM4_CH1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.TIM4_CH1.0.MemInc=DMA_MINC_ENABLE
+Dma.TIM4_CH1.0.Mode=DMA_NORMAL
+Dma.TIM4_CH1.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.TIM4_CH1.0.PeriphInc=DMA_PINC_DISABLE
+Dma.TIM4_CH1.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.TIM4_CH1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C1.IPParameters=Timing,OwnAddress,NoStretchMode
@@ -75,61 +69,70 @@ KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
 Mcu.IP1=CORTEX_M7
-Mcu.IP10=USB_OTG_FS
+Mcu.IP10=TIM4
+Mcu.IP11=USART3
+Mcu.IP12=USB_OTG_FS
 Mcu.IP2=DMA
 Mcu.IP3=I2C1
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SYS
-Mcu.IP7=TIM3
-Mcu.IP8=TIM4
-Mcu.IP9=USART3
-Mcu.IPNb=11
+Mcu.IP7=TIM1
+Mcu.IP8=TIM2
+Mcu.IP9=TIM3
+Mcu.IPNb=13
 Mcu.Name=STM32F722Z(C-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PF15
-Mcu.Pin11=PB14
-Mcu.Pin12=PD8
-Mcu.Pin13=PD9
-Mcu.Pin14=PD12
-Mcu.Pin15=PD13
-Mcu.Pin16=PD14
-Mcu.Pin17=PG6
-Mcu.Pin18=PG7
-Mcu.Pin19=PC9
+Mcu.Pin10=PB0
+Mcu.Pin11=PB1
+Mcu.Pin12=PF14
+Mcu.Pin13=PF15
+Mcu.Pin14=PE9
+Mcu.Pin15=PE11
+Mcu.Pin16=PE13
+Mcu.Pin17=PE14
+Mcu.Pin18=PB14
+Mcu.Pin19=PD8
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA8
-Mcu.Pin21=PA9
-Mcu.Pin22=PA10
-Mcu.Pin23=PA11
-Mcu.Pin24=PA12
-Mcu.Pin25=PA13
-Mcu.Pin26=PA14
-Mcu.Pin27=PB3
-Mcu.Pin28=PB7
-Mcu.Pin29=PB8
+Mcu.Pin20=PD9
+Mcu.Pin21=PD12
+Mcu.Pin22=PD13
+Mcu.Pin23=PD14
+Mcu.Pin24=PG6
+Mcu.Pin25=PG7
+Mcu.Pin26=PC9
+Mcu.Pin27=PA8
+Mcu.Pin28=PA9
+Mcu.Pin29=PA10
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PB9
-Mcu.Pin31=VP_SYS_VS_Systick
+Mcu.Pin30=PA11
+Mcu.Pin31=PA12
+Mcu.Pin32=PA13
+Mcu.Pin33=PA14
+Mcu.Pin34=PB3
+Mcu.Pin35=PB7
+Mcu.Pin36=PB8
+Mcu.Pin37=PB9
+Mcu.Pin38=VP_SYS_VS_Systick
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PB0
-Mcu.Pin8=PB1
-Mcu.Pin9=PF14
-Mcu.PinsNb=32
+Mcu.Pin5=PA0-WKUP
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F722ZETx
-MxCube.Version=6.0.1
-MxDb.Version=DB.6.0.0
+MxCube.Version=6.1.0
+MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA2_Stream4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -140,6 +143,7 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
+PA0-WKUP.Signal=S_TIM2_CH1_ETR
 PA10.Locked=true
 PA10.Mode=OTG/Dual_Role_Device
 PA10.Signal=USB_OTG_FS_ID
@@ -163,6 +167,8 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA2.Signal=S_TIM2_CH3
+PA3.Signal=S_TIM2_CH4
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=TIM_3_CH1_MOTOR_1
 PA6.Signal=S_TIM3_CH1
@@ -232,6 +238,10 @@ PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
 PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
+PE11.Signal=S_TIM1_CH2
+PE13.Signal=S_TIM1_CH3
+PE14.Signal=S_TIM1_CH4
+PE9.Signal=S_TIM1_CH1
 PF14.Locked=true
 PF14.Signal=GPIO_Input
 PF15.Locked=true
@@ -279,7 +289,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_USB_Init-USB_OTG_FS-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM2_Init-TIM2-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -375,6 +385,20 @@ SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.S_TIM1_CH1.0=TIM1_CH1,Input_Capture1_from_TI1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH2.0=TIM1_CH2,Input_Capture2_from_TI2
+SH.S_TIM1_CH2.ConfNb=1
+SH.S_TIM1_CH3.0=TIM1_CH3,Input_Capture3_from_TI3
+SH.S_TIM1_CH3.ConfNb=1
+SH.S_TIM1_CH4.0=TIM1_CH4,Input_Capture4_from_TI4
+SH.S_TIM1_CH4.ConfNb=1
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+SH.S_TIM2_CH3.0=TIM2_CH3,Output Compare3 CH3
+SH.S_TIM2_CH3.ConfNb=1
+SH.S_TIM2_CH4.0=TIM2_CH4,Input_Capture4_from_TI4
+SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
 SH.S_TIM3_CH2.0=TIM3_CH2,PWM Generation2 CH2
@@ -389,6 +413,21 @@ SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
 SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
 SH.S_TIM4_CH3.ConfNb=1
+TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM1.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
+TIM1.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
+TIM1.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
+TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2,Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,Prescaler,Period
+TIM1.Period=1999
+TIM1.Prescaler=1079
+TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
+TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
+TIM2.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
+TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture4_from_TI4,Period,Prescaler,Channel-Output Compare3 CH3,OCMode_3,OC3Preload
+TIM2.OC3Preload=ENABLE
+TIM2.OCMode_3=TIM_OCMODE_ACTIVE
+TIM2.Period=1999
+TIM2.Prescaler=1079
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
