--- a/stm32f7-drone.ioc
+++ b/stm32f7-drone.ioc
@@ -34,21 +34,7 @@ Dma.I2C1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAl
 Dma.Request0=TIM4_CH1
 Dma.Request1=I2C1_RX
 Dma.Request2=I2C1_TX
-Dma.Request3=TIM2_UP/CH3
-Dma.RequestsNb=4
-Dma.TIM2_UP/CH3.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.TIM2_UP/CH3.3.FIFOMode=DMA_FIFOMODE_ENABLE
-Dma.TIM2_UP/CH3.3.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
-Dma.TIM2_UP/CH3.3.Instance=DMA1_Stream1
-Dma.TIM2_UP/CH3.3.MemBurst=DMA_MBURST_INC4
-Dma.TIM2_UP/CH3.3.MemDataAlignment=DMA_MDATAALIGN_WORD
-Dma.TIM2_UP/CH3.3.MemInc=DMA_MINC_ENABLE
-Dma.TIM2_UP/CH3.3.Mode=DMA_NORMAL
-Dma.TIM2_UP/CH3.3.PeriphBurst=DMA_PBURST_INC4
-Dma.TIM2_UP/CH3.3.PeriphDataAlignment=DMA_PDATAALIGN_WORD
-Dma.TIM2_UP/CH3.3.PeriphInc=DMA_PINC_ENABLE
-Dma.TIM2_UP/CH3.3.Priority=DMA_PRIORITY_HIGH
-Dma.TIM2_UP/CH3.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.RequestsNb=3
 Dma.TIM4_CH1.0.Direction=DMA_MEMORY_TO_PERIPH
 Dma.TIM4_CH1.0.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.TIM4_CH1.0.Instance=DMA1_Stream0
@@ -85,10 +71,10 @@ Mcu.Name=STM32F722Z(C-E)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB0
-Mcu.Pin11=PB1
-Mcu.Pin12=PF14
-Mcu.Pin13=PF15
+Mcu.Pin10=PB1
+Mcu.Pin11=PF14
+Mcu.Pin12=PF15
+Mcu.Pin13=PE7
 Mcu.Pin14=PE9
 Mcu.Pin15=PE11
 Mcu.Pin16=PE13
@@ -116,13 +102,16 @@ Mcu.Pin35=PB7
 Mcu.Pin36=PB8
 Mcu.Pin37=PB9
 Mcu.Pin38=VP_SYS_VS_Systick
+Mcu.Pin39=VP_TIM1_VS_ControllerModeReset
 Mcu.Pin4=PH1-OSC_OUT
+Mcu.Pin40=VP_TIM2_VS_ControllerModeReset
+Mcu.Pin41=VP_TIM2_VS_ClockSourceITR
 Mcu.Pin5=PA0-WKUP
-Mcu.Pin6=PA2
-Mcu.Pin7=PA3
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=39
+Mcu.Pin6=PA3
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB0
+Mcu.PinsNb=42
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F722ZETx
@@ -130,7 +119,6 @@ MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.DMA1_Stream0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:true\:false
@@ -167,7 +155,6 @@ PA14.GPIO_Label=TCK
 PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
-PA2.Signal=S_TIM2_CH3
 PA3.Signal=S_TIM2_CH4
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=TIM_3_CH1_MOTOR_1
@@ -241,13 +228,12 @@ PD9.Signal=USART3_RX
 PE11.Signal=S_TIM1_CH2
 PE13.Signal=S_TIM1_CH3
 PE14.Signal=S_TIM1_CH4
+PE7.Signal=S_TIM1_ETR
 PE9.Signal=S_TIM1_CH1
 PF14.Locked=true
 PF14.Signal=GPIO_Input
 PF15.Locked=true
 PF15.Signal=GPIO_Input
-PG6.GPIOParameters=GPIO_Label
-PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
 PG6.Locked=true
 PG6.Signal=GPIO_Output
 PG7.GPIOParameters=GPIO_Label
@@ -393,10 +379,10 @@ SH.S_TIM1_CH3.0=TIM1_CH3,Input_Capture3_from_TI3
 SH.S_TIM1_CH3.ConfNb=1
 SH.S_TIM1_CH4.0=TIM1_CH4,Input_Capture4_from_TI4
 SH.S_TIM1_CH4.ConfNb=1
+SH.S_TIM1_ETR.0=TIM1_ETR,TriggerSource_ETR
+SH.S_TIM1_ETR.ConfNb=1
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,Input_Capture1_from_TI1
 SH.S_TIM2_CH1_ETR.ConfNb=1
-SH.S_TIM2_CH3.0=TIM2_CH3,Output Compare3 CH3
-SH.S_TIM2_CH3.ConfNb=1
 SH.S_TIM2_CH4.0=TIM2_CH4,Input_Capture4_from_TI4
 SH.S_TIM2_CH4.ConfNb=1
 SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
@@ -413,21 +399,28 @@ SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
 SH.S_TIM4_CH2.ConfNb=1
 SH.S_TIM4_CH3.0=TIM4_CH3,PWM Generation3 CH3
 SH.S_TIM4_CH3.ConfNb=1
+TIM1.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM1.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM1.Channel-Input_Capture2_from_TI2=TIM_CHANNEL_2
 TIM1.Channel-Input_Capture3_from_TI3=TIM_CHANNEL_3
 TIM1.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
-TIM1.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture2_from_TI2,Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,Prescaler,Period
+TIM1.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM1.ICPolarity_CH2=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM1.ICPolarity_CH3=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM1.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM1.IPParameters=Prescaler,Period,AutoReloadPreload,Channel-Input_Capture2_from_TI2,Channel-Input_Capture3_from_TI3,Channel-Input_Capture4_from_TI4,ICPolarity_CH1,ICPolarity_CH2,ICPolarity_CH3,ICPolarity_CH4,Slave_TriggerPolarity,Channel-Input_Capture1_from_TI1
 TIM1.Period=1999
 TIM1.Prescaler=1079
+TIM1.Slave_TriggerPolarity=TIM_TRIGGERPOLARITY_NONINVERTED
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM2.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM2.Channel-Input_Capture4_from_TI4=TIM_CHANNEL_4
-TIM2.Channel-Output\ Compare3\ CH3=TIM_CHANNEL_3
-TIM2.IPParameters=Channel-Input_Capture1_from_TI1,Channel-Input_Capture4_from_TI4,Period,Prescaler,Channel-Output Compare3 CH3,OCMode_3,OC3Preload
-TIM2.OC3Preload=ENABLE
-TIM2.OCMode_3=TIM_OCMODE_ACTIVE
+TIM2.ICPolarity_CH1=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM2.ICPolarity_CH4=TIM_INPUTCHANNELPOLARITY_FALLING
+TIM2.IPParameters=Prescaler,Period,AutoReloadPreload,TIM_MasterOutputTrigger,Channel-Input_Capture1_from_TI1,Channel-Input_Capture4_from_TI4,ICPolarity_CH1,ICPolarity_CH4
 TIM2.Period=1999
 TIM2.Prescaler=1079
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_RESET
 TIM3.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM3.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
@@ -436,21 +429,25 @@ TIM3.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM3.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,Channel-PWM Generation4 CH4,Period,AutoReloadPreload
 TIM3.Period=359
 TIM4.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM4.Channel-Input_Capture1_from_TI1=TIM_CHANNEL_1
 TIM4.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM4.IPParameters=Period,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,AutoReloadPreload,OCFastMode_PWM-PWM Generation3 CH3,OC3Preload_PWM,OC2Preload_PWM,OCMode_1,OC1Preload,Channel-Output Compare1 CH1,Pulse-Output Compare1 CH1
-TIM4.OC1Preload=ENABLE
+TIM4.IPParameters=Period,Channel-PWM Generation2 CH2,Channel-PWM Generation3 CH3,AutoReloadPreload,OCFastMode_PWM-PWM Generation3 CH3,OC3Preload_PWM,OC2Preload_PWM,Channel-Input_Capture1_from_TI1,Channel-Output Compare1 CH1
 TIM4.OC2Preload_PWM=ENABLE
 TIM4.OC3Preload_PWM=ENABLE
 TIM4.OCFastMode_PWM-PWM\ Generation3\ CH3=TIM_OCFAST_DISABLE
-TIM4.OCMode_1=TIM_OCMODE_ACTIVE
 TIM4.Period=359
-TIM4.Pulse-Output\ Compare1\ CH1=1
 USART3.IPParameters=VirtualMode-Asynchronous
 USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM1_VS_ControllerModeReset.Mode=Reset Mode
+VP_TIM1_VS_ControllerModeReset.Signal=TIM1_VS_ControllerModeReset
+VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
+VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
+VP_TIM2_VS_ControllerModeReset.Mode=Reset Mode
+VP_TIM2_VS_ControllerModeReset.Signal=TIM2_VS_ControllerModeReset
 board=NUCLEO-F722ZE
 boardIOC=true
 isbadioc=false
